Add metadata validator
Adds a new abstract base class QgsMetadataValidator for validating
metadata against standard schemas.

Initially only QgsNativeMetadataValidator for validating against
the native QGIS metadata schema is implemented.

In future this could be extended with Dublin Core, ISO 19115
validators, etc...

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -72,6 +72,7 @@ SET(QGIS_CORE_SRCS
   layertree/qgslayertree.cpp
 
   metadata/qgslayermetadata.cpp
+  metadata/qgslayermetadatavalidator.cpp
 
   auth/qgsauthcertutils.cpp
   auth/qgsauthconfig.cpp
@@ -844,6 +845,7 @@ SET(QGIS_CORE_HDRS
   composer/qgsticksscalebarstyle.h
 
   metadata/qgslayermetadata.h
+  metadata/qgslayermetadatavalidator.h
 
   processing/qgsprocessingalgorithm.h
   processing/qgsprocessingutils.h
